# sttui

./: CHANGELOG.md  LICENSE  README.md  clean.sh  install.sh  pyproject.toml  requirements.txt  run.sh  speech_to_text.py  uninstall.sh  update.sh
.github/workflows/: update-homebrew.yml
Formula/: stttui.rb
src/stttui/: __init__.py  singleton.py  speech_to_text.py
