[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stttui"
version = "0.2.0"
description = "Speech-to-Text TUI — offline transcription powered by faster-whisper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Anthony Holten" },
]
keywords = ["speech-to-text", "whisper", "tui", "transcription", "offline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0,<2.0.0",
    "sounddevice>=0.4.0,<1.0.0",
    "soundfile>=0.12.0,<1.0.0",
    "pynput>=1.7.0,<2.0.0",
    "pyperclip>=1.8.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    "tzdata>=2024.1",
    "textual>=0.40.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/aholten/sttui"
Repository = "https://github.com/aholten/sttui"
Issues = "https://github.com/aholten/sttui/issues"

[project.scripts]
stttui = "stttui.speech_to_text:main"

[tool.setuptools.packages.find]
where = ["src"]
